--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -656,13 +656,17 @@
   }
 \cs_new_protected:Npn \@@_backend_destination_aux:nnnn #1#2#3#4
   {
-    \box_move_down:nn
-      {#4}
-      { \hbox:n { \__kernel_backend_postscript:n { pdf.save.ll } } }
+    \vbox_to_zero:n
+      {
+        \tex_kern:D \dim_eval:n { -#4 } \scan_stop:
+        \hbox:n { \__kernel_backend_postscript:n { pdf.save.ll } }
+      }
     \tex_kern:D #1 \scan_stop:
-    \box_move_up:nn
-      {#3}
-      { \hbox:n { \__kernel_backend_postscript:n { pdf.save.ur } } }
+    \vbox_to_zero:n
+      {
+        \tex_kern:D \dim_eval:n { #3 } \scan_stop:
+        \hbox:n { \__kernel_backend_postscript:n { pdf.save.ur } }
+      }
     \tex_kern:D -#1 \scan_stop:
     \@@_backend_pdfmark:n
       {
@@ -1515,8 +1519,9 @@
   }
 \cs_new_protected:Npn \@@_backend_destination_aux:nnnn #1#2#3#4
   {
-    \box_move_down:nn {#3}
+    \vbox_to_zero:n
       {
+        \tex_kern:D \dim_eval:n { -#4 } \scan_stop:
         \hbox:n
           {
             \@@_backend:n { obj ~ @pdf_ #2 _llx ~ @xpos }
@@ -1524,8 +1529,9 @@
           }
       }
     \tex_kern:D #1 \scan_stop:
-    \box_move_up:nn {#4}
+    \vbox_to_zero:n
       {
+        \tex_kern:D \dim_eval:n { #3 } \scan_stop:
         \hbox:n
           {
             \@@_backend:n
