--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -660,12 +660,14 @@
       {
         \tex_kern:D \dim_eval:n { -#4 } \scan_stop:
         \hbox:n { \__kernel_backend_postscript:n { pdf.save.ll } }
+        \tex_vss:D
       }
     \tex_kern:D #1 \scan_stop:
     \vbox_to_zero:n
       {
         \tex_kern:D \dim_eval:n { #3 } \scan_stop:
         \hbox:n { \__kernel_backend_postscript:n { pdf.save.ur } }
+        \tex_vss:D
       }
     \tex_kern:D -#1 \scan_stop:
     \@@_backend_pdfmark:n
@@ -1527,6 +1529,7 @@
             \@@_backend:n { obj ~ @pdf_ #2 _llx ~ @xpos }
             \@@_backend:n { obj ~ @pdf_ #2 _lly ~ @ypos }
           }
+        \tex_vss:D
       }
     \tex_kern:D #1 \scan_stop:
     \vbox_to_zero:n
@@ -1545,6 +1548,7 @@
                 ]
               }
           }
+        \tex_vss:D
       }
     \tex_kern:D -#1 \scan_stop:
   }
